--- a/Ryan/second_trial.ipynb
+++ b/Ryan/second_trial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,23 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Anois Consulting Limited\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "rentalcars.com\n"
-     ]
-    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -61,7 +47,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-199-f03b1ac2dc37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mi\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-129-ef4c717d875f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mi\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -72,28 +58,56 @@
     "for x in df[\"Person Linkedin Url\"].tolist():\n",
     "    if i < t:\n",
     "        driver.get(x)\n",
-    "        time.sleep(15)\n",
+    "        time.sleep(5)\n",
     "        i += 1\n",
+    "       \n",
+    "    #get job\n",
+    "\n",
+    "    def get_job(path, destination, present):\n",
+    "        attempts = 0;\n",
+    "        while(attempts<2):\n",
+    "                try:\n",
+    "                    if present:\n",
+    "                        present_info = driver.find_element_by_xpath(path)\n",
+    "                        present_job[destination] = present_info.text\n",
+    "                    else:\n",
+    "                        past_info = driver.find_element_by_xpath(path)\n",
+    "                        past_job[destination] = past_info.text\n",
+    "           \n",
+    "                    break\n",
+    "                except (StaleElementReferenceException, NoSuchElementException) as e:\n",
+    "                    if e == StaleElementReferenceException:\n",
+    "                           attempts += 1\n",
+    "                    else:\n",
+    "                           attempts = 4\n",
+    "    \n",
     "        try:\n",
     "            name = driver.find_element_by_xpath(\"//h1[@class='pv-top-card-section__name Sans-26px-black-85%']\").text\n",
     "            connection = driver.find_element_by_xpath(\"//span[@class = 'dist-value']\").text\n",
     "            headline = driver.find_element_by_xpath(\"//h2[@class='pv-top-card-section__headline mt1 Sans-19px-black-85%']\").text      \n",
     "            location = driver.find_element_by_xpath(\"//h3[@class='pv-top-card-section__location Sans-17px-black-55%-dense mt1 inline-block']\").text\n",
     "            description = driver.find_element_by_xpath(\"//div[@class='pv-top-card-section__summary pv-top-card-section__summary--with-content mt4 ember-view']/p\").text\n",
+    "           \n",
+    " #present company info       \n",
+    "           \n",
+    "            driver.execute_script(\"window.scrollTo(0,1080);\")\n",
     "            pres_title = driver.find_element_by_css_selector('.pv-entity__summary-info h3:nth-of-type(1)').text\n",
-    "#             pres_company = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[1]/a/div/h4[1]/span[2]\").text\n",
-    "            pres_company = driver.find_element_by_css_selector('.pv-entity__secondary-title').text\n",
+    "# There's an issue with present company displaying for certain ppl\n",
+    "            pres_company = driver.find_element_by_xpath(\"//section[@id ='experience-section']//li[1]//h4[1]/span[2]\").text\n",
+    "            get_job(pres_company, 'Company', True)\n",
+    "            pres = driver.find_element_by_xpath(\"//section[@id = 'experience-section']/ul/li[1]\").text\n",
     "            pres_date = driver.find_element_by_xpath(\"//h4[@class='pv-entity__date-range inline-block Sans-15px-black-70%']\").text\n",
     "            pres_dur = driver.find_element_by_xpath(\"//span[@class='pv-entity__bullet-item']\").text\n",
     "            pres_loc = driver.find_element_by_xpath(\"//h4[@class='pv-entity__location Sans-15px-black-70% block']\").text\n",
     "            pres_des = driver.find_element_by_xpath(\"//p[@class='pv-entity__description Sans-15px-black-70% mt4']\").text\n",
+    "\n",
+    "#past company info            \n",
     "            past_title = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[2]/a/div/h3\").text\n",
     "            past_comp = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[2]/a/div/h4[@class='Sans-17px-black-85%']/span[2]\").text\n",
     "            past_date = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[2]/a/div/h4[2]/span[2]\").text\n",
     "            past_dur = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[2]/a/div/h4[3]/span[2]\").text\n",
     "            past_loc = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[2]/a/div/h4[4]/span[2]\").text\n",
     "            past_des = driver.find_element_by_xpath(\"//section[@class ='pv-profile-section experience-section ember-view']/ul/li[2]/div[@class='pv-entity__extra-details ember-view']/p\").text\n",
-    "\n",
     "\n",
     "           \n",
     "        except:\n",
@@ -113,27 +127,36 @@
     "            past_des = ''\n",
     "\n",
     "        datastore = {\n",
-    "             'Name': name,\n",
-    "             'Connection': connection,\n",
-    "             'Headline': headline, \n",
-    "             'Location': location, \n",
-    "             'Description': description, \n",
-    "             'Present Job Title': pres_title,\n",
-    "             'Company': pres_company,\n",
-    "             'Date': pres_date,\n",
-    "             'Duration': pres_dur,\n",
-    "             'Loc': pres_loc,\n",
-    "             'Des': pres_des,\n",
-    "             'Past Job Title': past_title,\n",
-    "             'Past Company': past_comp,\n",
-    "             'Past Date': past_date,\n",
-    "             'Past Dur': past_dur,\n",
-    "             'Past Loc': past_loc,\n",
-    "             'Past Description': past_des\n",
-    "        }\n",
+    "             'personal': {\n",
+    "                 'Name': name,\n",
+    "                 'Connection': connection,\n",
+    "                 'Headline': headline, \n",
+    "                 'Location': location, \n",
+    "                 'Description': description \n",
+    "                 },\n",
+    "            'present': {\n",
+    "                 'Present Job Title': pres_title,\n",
+    "                 'Company': pres_company,\n",
+    "                 'Date': pres_date,\n",
+    "                 'Duration': pres_dur,\n",
+    "                 'Loc': pres_loc,\n",
+    "                 'Des': pres_des,\n",
+    "                },   \n",
+    "            'past': {\n",
+    "                 'Past Job Title': past_title,\n",
+    "                 'Past Company': past_comp,\n",
+    "                 'Past Date': past_date,\n",
+    "                 'Past Dur': past_dur,\n",
+    "                 'Past Loc': past_loc,\n",
+    "                 'Past Description': past_des,\n",
+    "            },\n",
+    "            'education' : {\n",
+    "                 'Education': edu,\n",
+    "            }\n",
+    "        } \n",
     "\n",
     "\n",
-    "        print(\n",
+    "        print( \n",
     "            \n",
     "#             \"Hey \"+ name + \", came across your profile as I was connecting with a friend \" +\n",
     "#             \"from \" + location + \". Took a look at \"+ pres_company + \" and found it interesting. I personally \" +\n",
@@ -145,22 +168,22 @@
     "#           \"\\n\" + headline, \n",
     "#           \"\\n\" + location, \n",
     "#           \"\\n\" + description, \n",
-    "#           \"\\n\" + pres_title,\n",
-    "            \"\\n\" + pres_company,\n",
-    "#           \"\\n\" + pres_date,\n",
-    "#           \"\\n\" + pres_dur,\n",
-    "#           \"\\n\" + pres_loc,\n",
-    "#           \"\\n\" + pres_des,\n",
-    "#           \"\\n\" + past_title,    \n",
+    "            \"\\n\" + pres_title,\n",
+    "             pres_company,\n",
+    "            \"\\n\" + pres_date,\n",
+    "            \"\\n\" + pres_dur,\n",
+    "            \"\\n\" + pres_loc,\n",
+    "            \"\\n\" + pres_des,\n",
+    "#        \"\\n\" + past_title,    \n",
     "#           \"\\n\" + past_comp,    \n",
     "#           \"\\n\" + past_date + \" \"+ past_dur,    \n",
     "#           \"\\n\" + past_loc,\n",
-    "#           \"\\n\" + past_des    \n",
+    "#           \"\\n\" + past_des,\n",
     "\n",
     "            )\n",
     "    \n",
-    "    else:\n",
-    "        break\n",
+    "#     else:\n",
+    "#         break\n",
     "            \n",
     "# sending a request\n",
     "#     driver.find_element_by_css_selector('.pv-s-profile-actions.pv-s-profile-actions--connect.button-primary-large.mr2.mt2').click()\n",
